[project]
name = "sonarr-py"
version = "0.0.2"
dependencies = [
    "basearr-py>=0.0.1",
]
description = "Basic API wrapper for sonarr"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/devopsarr/sonarr-py"
"Bug Tracker" = "https://github.com/devopsarr/sonarr-py/issues"